@@ -1,6 +1,9 @@
 In Development:
 # Mentioning Check 0.9.14 for now, to fix distcheck target until next release
 
+* Use mkstemp() if available instead of tmpfile() or tempnam().
+  Patch #51.
+
 * Fix issue with string formatting in ck_assert(), where using
   the % operator would be interpreted as a string formatter. Bug #96.
 
